packages/boards/nros-board-cffi/src/generated.rs

//! AUTO-GENERATED by scripts/gen-abi-bindings.sh (bindgen 0.72.1) — DO NOT EDIT.
//!
//! Source of truth: `packages/boards/nros-board-cffi/include/nros/board.h` (RFC-0054).
//! Edit the header, rerun the script, commit both.
#![allow(non_camel_case_types, non_snake_case, non_upper_case_globals)]
#![allow(unsafe_op_in_unsafe_fn, clippy::missing_safety_doc)]
/* automatically generated by rust-bindgen 0.72.1 */

#[doc = " User application entry. Receives the `user` cookie passed to\n `nros_board_run`. Returns `0` on success, non-zero on error; the\n board maps the result onto `exit_success` / `exit_failure`."]
pub type nros_board_app_fn =
    ::core::option::Option<unsafe extern "C" fn(user: *mut core::ffi::c_void) -> i32>;
unsafe extern "C" {
    #[doc = " Board entry driver: run the board's full boot flow with the user\n application, then exit. Family-agnostic — for direct-exec boards\n (bare-metal, esp-hal) the application runs on the boot stack; for\n kernel-spawn families (FreeRTOS, ThreadX) the board allocates an app\n task and starts the scheduler, running the application in task\n context. Both shapes export this same symbol (the Rust side routes\n through `BoardEntry::run`). Never returns."]
    pub fn nros_board_run(
        cfg: *const core::ffi::c_void,
        app: nros_board_app_fn,
        user: *mut core::ffi::c_void,
    ) -> !;
}
unsafe extern "C" {
    #[doc = " Run board-specific hardware init (clock tree, pin mux, peripheral\n  wakes) for the given opaque config."]
    pub fn nros_board_init_hardware(cfg: *const core::ffi::c_void);
}
unsafe extern "C" {
    #[doc = " Emit one status / banner / error line. `msg` is a UTF-8 byte slice\n  of `len` bytes (no trailing newline required; the board appends\n  one)."]
    pub fn nros_board_println(msg: *const u8, len: usize);
}
unsafe extern "C" {
    #[doc = " Terminate the firmware after a successful run. Never returns."]
    pub fn nros_board_exit_success() -> !;
}
unsafe extern "C" {
    #[doc = " Terminate the firmware after a failed run. Never returns."]
    pub fn nros_board_exit_failure() -> !;
}
